[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/innkeeper.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/speech.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 73.9998

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 127.195

[node name="Innkeeper" type="KinematicBody2D" groups=[
"active_dude",
"dude",
]]
z_index = 1
script = ExtResource( 1 )
max_interaction_cooldown = 50
items_limit = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -12.5446, 77.6605 )
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="InteractionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
position = Vector2( -19.5549, -11.9773 )
shape = SubResource( 4 )

[node name="SpeechBubble" type="Sprite" parent="."]
visible = false
position = Vector2( -96.9088, -146.635 )
texture = ExtResource( 3 )

[node name="PreviewIcon" type="Sprite" parent="SpeechBubble"]
position = Vector2( -11.3639, -8.63651 )
scale = Vector2( 0.4, 0.4 )
